# locma

./: .editorconfig  .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml  train.py
depot/: config.json
docs/: PPO-REVIEW-FB.md  STORY.md  architecture.md  baseline.md  cli.md  depot.md  distill-mcts-ppo2-design.md  distill-mcts-ppo2-plan.md  draft-benchmark.md  draft-optimization.md  e15-ranking-az2-design.md  e26-microguards-design.md  e31-draft-valuation-plan.md  e37-planner-anchor-plan.md  experiments.md  ideas.md  net-probe-HANDOFF.md  netdmcts-phase1-design.md  netdmcts-phase1-plan.md  netdmcts-phase2-design.md  netdmcts-phase2-plan.md  play-minion-view-design.md  play-minion-view-plan.md  ppo-autoreg-action-design.md  ppo-autoreg-action-plan.md  ppo-ceiling-study-HANDOFF.md  ppo-ceiling-study-design.md  ppo-ceiling-study-plan.md  ppo-league-selfplay-HANDOFF.md  ppo-league-selfplay-design.md  ppo-league-selfplay-plan.md  ppo-method-scorecard.md  ppo-next-experiments.md  ppo-review.md  ppo2-tokenized-obs-design.md  ppo2-tokenized-obs-plan.md  reactive-limits-program.md  searchers-fiasco.md  unifying-web-fx.md  vbeam-distill-design.md  (+2 more)
replays/: r_00154d682f85.jsonl  r_0326573c2329.jsonl  r_092c10f1eae4.jsonl  r_09bcca571f1d.jsonl  r_0cdb0dd793d2.jsonl  r_1b7ff0db1957.jsonl  r_1c4a58601420.jsonl  r_2ed35474f7cb.jsonl  r_3810f1e0bf87.jsonl  r_3d89c2e48d2c.jsonl  r_3f92bccc2981.jsonl  r_47713db3802f.jsonl  r_4c6630cece30.jsonl  r_58af06ed1505.jsonl  r_5c2ea2e871fa.jsonl  r_647d1334aa60.jsonl  r_8d59e21b2746.jsonl  r_9766a87f27c6.jsonl  r_9c76256e2eb4.jsonl  r_9e08ddffda83.jsonl  r_a0849adcf077.jsonl  r_b637130aebd2.jsonl  r_ce1e87d82597.jsonl  r_d2ff0cad8016.jsonl  r_d5075d24829f.jsonl  r_da8d6dcb01b2.jsonl  r_e0576e9b00d9.jsonl  r_ebf6b7ef7655.jsonl  r_f51855ec45d5.jsonl
scripts/: archviz_extract.py  bench_policies.py  bks_driver.py  blue_oracle_horizon.py  blue_oracle_horizon_verify.py  blue_value_diag.py  e14_diag.py  e15_driver.py  e16_spellrep.py  e17_draftdisc.py  e18a_gamma.py  e18b_learndraft.py  e18c_exploit.py  e19_deckretrain.py  e20_draftdistill.py  e21_advopponent.py  e22_mcts_depth.py  e23_netdmcts_alloc.py  e24_rbeam_bench.py  e25_strong_league.py  e26_guards.py  e27_concept_probe.py  e28_encviz_export.py  e28_gate2_bench.py  e28_pointer_bc.py  e28_stack_bench.py  e28b_mix_ablation.py  e28c_bench.py  e28c_fx_bc.py  e28c_stack_bench.py  e28d_bench.py  e29_fuse_decomp.py  e29_gate_probe.py  e29_slim_bench.py  e29_slim_reprobe_compare.py  e29_slim_reprobe_summary.py  e29_slim_stack_bench.py  e30_plan_bc.py  e31a_value_table.py  e32_phase0_smoke.py  (+26 more)
(+362 files in other folders)
