[project]
name = "locma"
version = "0.1.0"
description = "Legends of Code & Magic 1.2 explore kit"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "rich>=13", "scipy>=1.11", "numpy>=1.26", "openskill>=5"]

[project.optional-dependencies]
ml = ["gymnasium>=0.29", "stable-baselines3>=2.3", "sb3-contrib>=2.3", "torch>=2.2", "trueskill>=0.4.5"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
locma = "locma.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC"]
