[project]
name = "locma"
version = "0.1.0"
description = "Legends of Code & Magic 1.2 explore kit"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "SiGMan", email = "sigman78@gmail.com" }]
keywords = ["locm", "card-game", "reinforcement-learning", "game-ai", "tcg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["typer>=0.12", "rich>=13", "scipy>=1.11", "numpy>=1.26", "openskill>=5"]

[project.optional-dependencies]
ml = ["gymnasium>=0.29", "stable-baselines3>=2.3", "sb3-contrib>=2.3", "torch>=2.2", "trueskill>=0.4.5"]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
locma = "locma.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC"]
